@@ -7,7 +7,7 @@ Description: Fix cross-compilation on musl-based systems.
  AM_GNU_GETTEXT_REQUIRE_VERSION macro which requires at least a specific
  version, and bump the AM_GNU_GETTEXT_VERSION to the first one that had
  support for the new macro.
-Forwarded: no
+Forwarded: yes
 Origin: vendor
 
 ---
@@ -16,17 +16,14 @@ Origin: vendor
 
 --- a/configure.ac
 +++ b/configure.ac
-@@ -34,7 +34,13 @@ AC_SYS_LARGEFILE
+@@ -34,7 +34,10 @@ AC_SYS_LARGEFILE
  AM_PROG_AR
  LT_INIT
  
 -AM_GNU_GETTEXT_VERSION([0.18.2])
-+# Require at least this gettext version, but will take any later version too.
++# Minimal version supporting AM_GNU_GETTEXT_REQUIRE_VERSION.
 +AM_GNU_GETTEXT_REQUIRE_VERSION([0.19.8])
-+# XXX: We cannot remove the following macro due to backwards compatibility
-+# reasons. The above macro is set unconditionally to the minimal version
-+# required, and the below is set to 0.19.6, the first version introducing
-+# the AM_GNU_GETTEXT_REQUIRE_VERSION macro.
++# Require at least the following version, but use the latest available one.
 +AM_GNU_GETTEXT_VERSION([0.19.6])
  AM_GNU_GETTEXT([external])
  
